--- a/Agile.Web/Web.config
+++ b/Agile.Web/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
@@ -70,7 +70,6 @@
     </client>
     <bindings>
       <basicHttpBinding>
-        <binding name="TransferBinding" maxReceivedMessageSize="10067108864" transferMode="Streamed" messageEncoding="Mtom"/>
         <binding name="BasicHttpBinding_LanguageService"/>
       </basicHttpBinding>
       <wsHttpBinding>
@@ -89,9 +88,6 @@
         </endpoint>
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
       </service>
-      <service name="Agile.Web.ServerAgileTransfer" behaviorConfiguration="TransferBehavior">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="TransferBinding" contract="Agile.Services.IServerAgileTransfer"/>
-      </service>
     </services>
     <behaviors>
       <serviceBehaviors>
@@ -99,10 +95,6 @@
           <!-- To avoid disclosing metadata information, set the value below to false and remove the metadata endpoint above before deployment -->
           <serviceMetadata httpGetEnabled="true"/>
           <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="true"/>
-        </behavior>
-        <behavior name="TransferBehavior">
-          <serviceMetadata httpGetEnabled="true"/>
           <serviceDebug includeExceptionDetailInFaults="true"/>
         </behavior>
       </serviceBehaviors>
