--- a/Agile.Windows/Agile.Windows.csproj
+++ b/Agile.Windows/Agile.Windows.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -213,10 +213,6 @@
     <ProjectReference Include="..\Agile.Entities\Agile.Entities.csproj">
       <Project>{1E623D42-BFBA-47A2-B36E-CD621F799F12}</Project>
       <Name>Agile.Entities</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Agile.Local\Agile.Local.csproj">
-      <Project>{77CC6F83-D009-47EB-BD12-A12F83C6E26B}</Project>
-      <Name>Agile.Local</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
