Removing Auth (Migrations, LoadNorthwind y ExampleEntities)

--- a/Agile.Load/Agile.Load.csproj
+++ b/Agile.Load/Agile.Load.csproj
@@ -101,11 +101,7 @@
       <Name>Agile.Logic</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="AuthRules.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
