--- a/Agile.Entities/Agile.Entities.csproj
+++ b/Agile.Entities/Agile.Entities.csproj
@@ -46,8 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Board.cs" />
+    <Compile Include="Card.cs" />
+    <Compile Include="Attachment.cs" />
+    <Compile Include="Comment.cs" />
+    <Compile Include="List.cs" />
+    <Compile Include="Notification.cs" />
+    <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AgileConfiguration.cs" />
+    <Compile Include="Tag.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Extensions\Signum.Entities.Extensions\Signum.Entities.Extensions.csproj">
