--- a/Agile.Logic/Agile.Logic.csproj
+++ b/Agile.Logic/Agile.Logic.csproj
@@ -45,6 +45,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BoardLogic.cs" />
+    <Compile Include="CardLogic.cs" />
+    <Compile Include="CommentLogic.cs" />
+    <Compile Include="NotificationLogic.cs" />
+    <Compile Include="ProjectLogic.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -52,6 +57,7 @@
     </Compile>
     <Compile Include="Starter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TagLogic.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Extensions\Signum.Engine.Extensions\Signum.Engine.Extensions.csproj">
