--- a/Agile.Web/Agile.Web.csproj
+++ b/Agile.Web/Agile.Web.csproj
@@ -389,6 +389,7 @@
     <Content Include="Views\Board\List.cshtml" />
     <Content Include="Views\Board\Card.cshtml" />
     <Content Include="Views\Admin\Agile\AttachmentRepository.cshtml" />
+    <Content Include="Views\Board\BoardPartial.cshtml" />
     <TypeScriptCompile Include="Scripts\Agile.ts" />
     <None Include="Service References\BingTranslationService\configuration91.svcinfo" />
     <None Include="Service References\BingTranslationService\configuration.svcinfo" />
